feat(html, css): log in/register

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,8 @@
 					<li class="unit unit-m-1-5 unit-l-1-5"><a href="media.html">Partners &amp; Media</a></li>
 					<li class="unit unit-m-1-5 unit-l-1-5"><a href="advocacy.html">Our Advocacy</a></li>
 					<li class="unit unit-m-1-5 unit-l-1-5"><a href="donate.html">Donations</a></li>
+					<li class="unit"><a href="#">Log In Hi</a></li>
+					<li class="unit"><a href="#">Register</a></li>
 				</ul>
 			</nav>
 
