--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -202,6 +202,28 @@
 		}
 }
 
+@media only screen and (max-width: 600px) {
+
+	.top-nav ul li:nth-child(6) {
+     border-right: 2px solid #ffffff;
+   }
+
+	.top-nav ul li:nth-child(6),
+	.top-nav ul li:nth-child(7) {
+		width: 35%;
+		margin: 0.25em 0;
+	}
+
+	.top-nav ul li:nth-child(6) a,
+	.top-nav ul li:nth-child(7) a {
+		margin: 0;
+		padding: 0.35em 0;
+		font-size: 0.8em;
+	}
+
+}
+
+
 // Bottom Navigation
 
 
@@ -288,7 +310,7 @@
 	position: relative;
 	height: 13rem;
 	overflow: hidden;
-	background-color: #f7f7f7; 
+	background-color: #f7f7f7;
 	@include ease(all, 250ms, linear);
 	h3 {
 		width: 100%;
@@ -324,11 +346,11 @@
 		font-family: 'Roboto', sans-serif;
 		font-size: 4rem;
 		font-weight: 100;
-		text-align: right;			
+		text-align: right;
 		&:focus {
 			outline: 1px solid $green;
 		}
-	}	
+	}
 	input[type=radio] {
 		opacity: 0;
 		position: absolute;
@@ -344,7 +366,7 @@
 		@include ease(all, 150ms, ease-in);
 		transform: translateY(9.75rem);
 		height: 3.25rem;
-	
+
 	}
 	input[type=radio]:checked:before {
 		content: 'Selected';
@@ -363,7 +385,7 @@
 		line-height: 3.25rem; /* to compensate for the height of the box */
 		@media only screen and (max-width: 25em) { /* — — — — — XSMALL Screens — — — — — */
 			padding: 0 0 0rem 31%;
-		}		
+		}
 		@media only screen and (min-width: 25em) { /* — — — — — SMALL to LARGE Screens — — — — — */
 			padding: 0 0 0rem 38%;
 		}
@@ -378,14 +400,14 @@
 		font-weight: 100;
 		text-align: center;
 	}
-	::-moz-placeholder { 
+	::-moz-placeholder {
 		color: #A1A1A1;
 		font-family: 'Roboto', sans-serif;
 		font-size: 4rem;
 		font-weight: 100;
 		text-align: center;
 	}
-	:-moz-placeholder { 
+	:-moz-placeholder {
 		color: #A1A1A1;
 		font-family: 'Roboto', sans-serif;
 		font-size: 4rem;
@@ -487,7 +509,7 @@ textarea {
 
 .gigantor-donate-button {
 	a, &:visited, &:link {
-	color: $light-grey;	
+	color: $light-grey;
 	text-decoration: none;
 	border: none;
 	border-bottom: 0px solid red;
