--- a/css/style.css
+++ b/css/style.css
@@ -1559,7 +1559,6 @@ textarea {
   transition: all 200ms ease-in;
   display: block;
   margin: 0 auto;
-  padding-top: 10%;
   text-align: center;
   background-color: #6B8E23;
   height: 13rem; }
@@ -1569,10 +1568,17 @@ textarea {
     text-decoration: none;
     border: none;
     border-bottom: 0px solid red;
-    font-weight: 300; }
+    font-weight: 300;
+    padding-top: 5rem; }
   /* line 503, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
   .gigantor-donate-button:hover, .gigantor-donate-button:focus, .gigantor-donate-button:active {
     color: #6B8E23;
     background-color: #bdc4a7;
     text-shadow: 1px 1px 0px #f5f5f5;
     font-weight: 700; }
+  @media only screen and (max-width: 25em) {
+    .gigantor-donate-button {
+      /* — — — — — Up to SMALL Screens — — — — — */ }
+      /* line 510, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+      .gigantor-donate-button a, .gigantor-donate-button:visited, .gigantor-donate-button:link {
+        font-size: 1.75rem; } }
